<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="new_user_register">New user? Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password_recover">Forgot Password ? Recover</string>
    <string name="home">Home</string>
    <string name="users">Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="online">Online</string>
    <string name="start_typing">Start typing</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="delivered">delivered</string>
    <string name="sender_message">Sender Message</string>
    <string name="_00_00am">00:00AM</string>
    <string name="_01_01_2000_00_00am">01/01/2000 00:00AM</string>
</resources>
