<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <!-- Email -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/emailTIL"
        android:id="@+id/passwordTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            android:hint="@string/password"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/passwordTIL"
        android:id="@+id/confirmPasswordTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordText"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/confirmPasswordTIL"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="8dp"
        android:id="@+id/register_register_btn"/>

    <TextView
        android:id="@+id/have_accountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/register_register_btn"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

</RelativeLayout>











