<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"/>

    <!-- Email -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginText"
        android:layout_marginTop="150dp"
        android:id="@+id/emailTIL">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_emailText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailTIL"
        android:id="@+id/passwordTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_passwordText"
            android:hint="@string/password"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_account_login"
        android:drawablePadding="8dp"
        android:layout_marginTop="5dp"
        android:id="@+id/login_btn"/>

    <TextView
        android:id="@+id/recoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_recover"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/login_btn"
        android:layout_marginTop="5dp"/>

    <!-- google signIn button -->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recoverPassword"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register"
        android:textColor="@color/colorBlack"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>











