<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/sender_profileIV"
            android:src="@drawable/ic_default_image"
            app:c_border_color="@null"/>

        <TextView
            android:id="@+id/sender_timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01_01_2000_00_00am"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/sender_messageTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/bg_sender"
            android:padding="15dp"
            android:text="@string/sender_message"/>


    </LinearLayout>

    <TextView
        android:id="@+id/isSeenTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:text="@string/delivered"
        android:visibility="gone"/>


</LinearLayout>