<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <!-- profile photo container-->
    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/chat_profilePhoto"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_profile_white"
        app:c_background_color="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/chat_receiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/chat_receiverStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/chatLayout"/>

    <LinearLayout
        android:id="@+id/chatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/chat_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="15dp"
            android:hint="@string/start_typing"
            android:inputType="textCapSentences|textMultiLine"/>

        <ImageButton
            android:id="@+id/chat_sendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/ic_send"/>

    </LinearLayout>

</RelativeLayout>










